--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <h2>飲食店経営を始めるオーナー・店長の方々のためのコラムサイト</h2>
             </div>
             <div class="header-bottom">
-                <img src="./image/column_title.jpg">
+                <img src="column_title.jpg">
                 <h1>飲食店の生産性改善マネジメントお役立ちコラム</h1>
             </div>
         </div>
@@ -90,11 +90,11 @@
     <div class="mainvisual">
         <div class="sliderArea">
             <div class="full-screen_one slider">
-              <div><img src="image/mainvisual1.jpg" alt="125naroom"><p>A</p></div>
-              <div><img src="image/mainvisual2.jpg" alt="125naroom"></div>
-              <div><img src="image/mainvisual3.jpg" alt="125naroom"></div>
-              <div><img src="image/mainvisual4.jpg" alt="125naroom"></div>
-              <div><img src="image/mainvisual5.jpg" alt="125naroom"></div>
+              <div><img src="mainvisual1.jpg" alt="125naroom"><p>A</p></div>
+              <div><img src="mainvisual2.jpg" alt="125naroom"></div>
+              <div><img src="mainvisual3.jpg" alt="125naroom"></div>
+              <div><img src="mainvisual4.jpg" alt="125naroom"></div>
+              <div><img src="mainvisual5.jpg" alt="125naroom"></div>
             </div>
           </div>
         </div>
