--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <!--SEO対策 -->
 
     <!-- OGP設定 -->
-    <meta property="og:site_name" content="DX推進サービス" />
+    <meta property="og:site_name" content="" />
     <meta property="og:description" content="" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="DX推進サービス" />
+    <meta property="og:title" content="" />
     <!-- OGP設定 -->
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -134,11 +134,16 @@
     <div class="mainvisual">
         <div class="sliderArea">
             <div class="full-screen_one slider">
-              <div><img src="mainvisual1.jpg" alt="125naroom"><p>A</p></div>
-              <div><img src="mainvisual2.jpg" alt="125naroom"></div>
-              <div><img src="mainvisual3.jpg" alt="125naroom"></div>
-              <div><img src="mainvisual4.jpg" alt="125naroom"></div>
-              <div><img src="mainvisual5.jpg" alt="125naroom"></div>
+                <div>
+                    <a class="mainvisual-slide1" href="">
+                        <img src="mainvisual1.jpg" alt="125naroom">
+                        <div class="slide-text">コロナ禍の飲食店でできる感染対策は?</div>
+                    </a>
+                </div>
+              <div><a href=""><img src="mainvisual2.jpg" alt="125naroom"></a></div>
+              <div><a href=""><img src="mainvisual3.jpg" alt="125naroom"></a></div>
+              <div><a href=""><img src="mainvisual4.jpg" alt="125naroom"></a></div>
+              <div><a href=""><img src="mainvisual5.jpg" alt="125naroom"></a></div>
             </div>
           </div>
         </div>
