--- a/index.html
+++ b/index.html
@@ -134,16 +134,11 @@
     <div class="mainvisual">
         <div class="sliderArea">
             <div class="full-screen_one slider">
-                <div>
-                    <a class="mainvisual-slide1" href="">
-                        <img src="mainvisual1.jpg" alt="125naroom">
-                        <div class="slide-text">コロナ禍の飲食店でできる感染対策は?</div>
-                    </a>
-                </div>
-              <div><a href=""><img src="mainvisual2.jpg" alt="125naroom"></a></div>
-              <div><a href=""><img src="mainvisual3.jpg" alt="125naroom"></a></div>
-              <div><a href=""><img src="mainvisual4.jpg" alt="125naroom"></a></div>
-              <div><a href=""><img src="mainvisual5.jpg" alt="125naroom"></a></div>
+                <div><a class="mainvisual-slide1" href=""><img src="mainvisual1.jpg" alt="125naroom"></a></div>
+                <div><a href=""><img src="mainvisual2.jpg" alt="125naroom"></a></div>
+                <div><a href=""><img src="mainvisual3.jpg" alt="125naroom"></a></div>
+                <div><a href=""><img src="mainvisual4.jpg" alt="125naroom"></a></div>
+                <div><a href=""><img src="mainvisual5.jpg" alt="125naroom"></a></div>
             </div>
           </div>
         </div>
