--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="">
+    <link rel="shortcut icon" href="favicon.ico">
 
-    <title>飲食店生産性改善.bizサイトTOP</title>
+    <title>飲食店生産性改善.biz│飲食店マネジメント層のための生産性改善・席回転率アップのためのお役立ちコラムサイト</title>
 
     <!--SEO対策 -->
-　　<meta name="description"  content="" />
-    <meta content='' name='keywords'>
+　　<meta name="description"  content="飲食店生産性改善.bizは飲食店をこれから開業する方や開業し始めたばかりの方、飲食店の経営や運営に関わる多忙なマネジメント層の方々のために生産性改善や回転率アップ、リピーター販促や集客のヒントや情報源となるお役立ちコラムサイトです。" />
+    <meta content='生産性改善,席回転率,リピーター,集客,飲食店,経営者,マネジメント層,店長,順番待ちシステム,労働分配率,人時売上高' name='keywords'>
     <!--SEO対策 -->
 
     <!-- OGP設定 -->
@@ -49,7 +49,7 @@
     jQuery(document).on('ready', function() {
     $(".full-screen_one").slick({
     centerMode: true,
-    centerPadding: '15%',
+    centerPadding: '24%',
     dots: true,
     autoplay: true,
     autoplaySpeed: 10000,
@@ -134,11 +134,36 @@
     <div class="mainvisual">
         <div class="sliderArea">
             <div class="full-screen_one slider">
-                <div><a class="mainvisual-slide1" href=""><img src="mainvisual1.jpg" alt="125naroom"></a></div>
-                <div><a href=""><img src="mainvisual2.jpg" alt="125naroom"></a></div>
-                <div><a href=""><img src="mainvisual3.jpg" alt="125naroom"></a></div>
-                <div><a href=""><img src="mainvisual4.jpg" alt="125naroom"></a></div>
-                <div><a href=""><img src="mainvisual5.jpg" alt="125naroom"></a></div>
+                <div>
+                    <a class="mainvisual-slide" href="">
+                        <img src="mainvisual1.png" alt="125naroom">
+                        <div class="slide-text"><span class="slider-text-accent">コロナ禍の飲食店でできる感染対策は?</span></div>
+                    </a>
+                </div>
+                <div>
+                    <a class="mainvisual-slide" href="">
+                        <img src="mainvisual2.png" alt="125naroom">
+                        <div class="slide-text"><span class="slider-text-accent">リピーターを育成するにはどうすれば良いか？</span></div>
+                    </a>
+                </div>
+                <div>
+                    <a class="mainvisual-slide" href="">
+                        <img src="mainvisual3.jpg" alt="125naroom">
+                        <div class="slide-text"><span class="slider-text-accent">XXXXXXXXXXXXXXXXXXXXXXXXXX</span></div>
+                    </a>
+                </div>
+                <div>
+                    <a class="mainvisual-slide" href="">
+                        <img src="mainvisual4.jpg" alt="125naroom">
+                        <div class="slide-text"><span class="slider-text-accent">XXXXXXXXXXXXXXXXXXXXXXXXXX</span></div>
+                    </a>
+                </div>
+                <div>
+                    <a class="mainvisual-slide" href="">
+                        <img src="mainvisual5.png" alt="125naroom">
+                        <div class="slide-text"><span class="slider-text-accent">生活改善とは？</span></div>
+                    </a>
+                </div>
             </div>
           </div>
         </div>
@@ -150,85 +175,87 @@
                 <h3>新着記事</h3>
             </div>
             <div class="article-img-boxes1">
-                <a  href="" class="article-img-box">
+                <div class="article-img-box">
                     <div class="article-img-box-title">
-                        <p>生産性</p>
+                        <a href="">生産性</a>
                     </div>
-                    <img src="demo-image.jpg" alt="img">
+                    <a href=""><img src="demo-image.jpg" alt="img"></a>
                     <div class="article-img-box-text">
-                        <p>チャンスロス防止！飲食店のピークタイムを伸ばすには？</p>
+                        <a href="">チャンスロス防止！飲食店のピークタイムを伸ばすには？</a>
                     </div>
-                </a>
-                <a href="" class="article-img-box">
+                </div>
+                <div class="article-img-box">
                     <div class="article-img-box-title">
-                        <p>知識</p>
+                        <a href="">知識</a>
                     </div>
-                    <img src="demo-image.jpg" alt="img">
+                    <a href=""><img src="demo-image.jpg" alt="img"></a>
                     <div class="article-img-box-text">
-                        <p>飲食店マネジメント職が知るべき経営指標「FLコスト」とは？</p>
+                        <a href="">飲食店マネジメント職が知るべき経営指標「FLコスト」とは？</a>
                     </div>
-                </a>
-                <a href="" class="article-img-box">
+                </div>
+                <div class="article-img-box">
                     <div class="article-img-box-title">
-                        <p>集客</p>
+                        <a href="">集客</a>
                     </div>
-                    <img src="demo-image.jpg" alt="img">
+                    <a href=""><img src="demo-image.jpg" alt="img"></a>
                     <div class="article-img-box-text">
-                        <p>飲食店の集客のコツ教えます。飲食店と顧客分析編</p>
+                        <a href="">飲食店の集客のコツ教えます。飲食店と顧客分析編</a>
                     </div>
-                </a>
-                <a href="" class="article-img-box">
+                </div>
+                <div class="article-img-box">
                     <div class="article-img-box-title">
-                        <p>行列</p>
+                        <a href="">行列</a>
                     </div>
-                    <img src="demo-image.jpg" alt="img">
+                    <a href=""><img src="demo-image.jpg" alt="img"></a>
                     <div class="article-img-box-text">
-                        <p>飲食店に行列ができる仕組みとその意外なワケとは？</p>
+                        <a href="">飲食店に行列ができる仕組みとその意外なワケとは？</a>
                     </div>
-                </a>
+                </div>
             </div>
 
             <button class="see-more"><p>もっと見る ＞</p></button>
 
             <div class="article-img-boxes2">
-                <a href="" class="article-img-box">
+                <div class="article-img-box">
                     <div class="article-img-box-title">
-                        <p>生産性</p>
+                        <a href="">生産性</a>
                     </div>
-                    <img src="demo-image.jpg" alt="img">
+                    <a href=""><img src="demo-image.jpg" alt="img"></a>
                     <div class="article-img-box-text">
-                        <p>チャンスロス防止！飲食店のピークタイムを伸ばすには？</p>
+                        <a href="">チャンスロス防止！飲食店のピークタイムを伸ばすには？</a>
                     </div>
-                </a>
-                <a href="" class="article-img-box">
+                </div>
+                <div class="article-img-box">
                     <div class="article-img-box-title">
-                        <p>知識</p>
+                        <a href="">知識</a>
                     </div>
-                    <img src="demo-image.jpg" alt="img">
+                    <a href=""><img src="demo-image.jpg" alt="img"></a>
                     <div class="article-img-box-text">
-                        <p>飲食店マネジメント職が知るべき経営指標「FLコスト」とは？</p>
+                        <a href="">飲食店マネジメント職が知るべき経営指標「FLコスト」とは？</a>
                     </div>
-                </a>
-                <a href="" class="article-img-box">
+                </div>
+                <div class="article-img-box">
                     <div class="article-img-box-title">
-                        <p>集客</p>
+                        <a href="">集客</a>
                     </div>
-                    <img src="demo-image.jpg" alt="img">
+                    <a href=""><img src="demo-image.jpg" alt="img"></a>
                     <div class="article-img-box-text">
-                        <p>飲食店の集客のコツ教えます。飲食店と顧客分析編</p>
+                        <a href="">飲食店の集客のコツ教えます。飲食店と顧客分析編</a>
                     </div>
-                </a>
-                <a href="" class="article-img-box">
+                </div>
+                <div class="article-img-box">
                     <div class="article-img-box-title">
-                        <p>行列</p>
+                        <a href="">行列</a>
                     </div>
-                    <img src="demo-image.jpg" alt="img">
+                    <a href=""><img src="demo-image.jpg" alt="img"></a>
                     <div class="article-img-box-text">
-                        <p>飲食店に行列ができる仕組みとその意外なワケとは？</p>
+                        <a href="">飲食店に行列ができる仕組みとその意外なワケとは？</a>
                     </div>
-                </a>
+                </div>
             </div>
+
             <button class="see-close hidden"><p>非表示</p></button>
+        
         </main>
         <aside id="aside">
             <div class="aside-container">
@@ -236,34 +263,34 @@
                     <h3>よく読まれている記事</h3>
                 </div>
                 <div class="aside-boxes">
-                    <a href="" class="aside-box">
-                        <div class="aside-box-number">1</div>
+                    <div class="aside-box">
+                        <a href="" class="aside-box-number">1</a>
                         <div class="aside-box-img">
-                            <img src="demo-image2.jpg" alt="img">
+                            <a href=""><img src="demo-image2.jpg" alt="img"></a>
                         </div>
                         <div class="aside-box-text">
-                            <p>飲食店マネジメント職が知るべき経営指標
-                                「人時売上高」とは？</p>
+                            <a href="">飲食店マネジメント職が知るべき経営指標
+                                「人時売上高」とは？</a>
                         </div>
-                    </a>
-                    <a href="" class="aside-box">
-                        <div class="aside-box-number">2</div>
+                    </div>
+                    <div class="aside-box">
+                        <a href="" class="aside-box-number">2</a>
                         <div class="aside-box-img">
-                            <img src="demo-image2.jpg" alt="img">
+                            <a href=""><img src="demo-image2.jpg" alt="img"></a>
                         </div>
                         <div class="aside-box-text">
-                            <p>時短店舗必見！コロナ禍の飲食店経営に欠かせない空席対策のコツとは？</p>
+                            <a href="">時短店舗必見！コロナ禍の飲食店経営に欠かせない空席対策のコツとは？</a>
                         </div>
-                    </a>
-                    <a href="" class="aside-box">
-                        <div class="aside-box-number">3</div>
+                    </div>
+                    <div class="aside-box">
+                        <a href="" class="aside-box-number">3</a>
                         <div class="aside-box-img">
-                            <img src="demo-image2.jpg" alt="img">
+                            <a href=""><img src="demo-image2.jpg" alt="img"></a>
                         </div>
                         <div class="aside-box-text">
-                            <p>コロナ禍の飲食店でできる感染症対策と集客施策の両立に欠かせない事は？</p>
+                            <a href="">コロナ禍の飲食店でできる感染症対策と集客施策の両立に欠かせない事は？</a>
                         </div>
-                    </a>
+                    </div>
                 </div>
             </div>
         </aside>
