--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                     <div class="article-img-box-title">
                         <a href="">生産性</a>
                     </div>
-                    <a href=""><img src="demo-image.jpg" alt="img"></a>
+                    <a href=""><img src="demo-image1.png" alt="img"></a>
                     <div class="article-img-box-text">
                         <a href="">チャンスロス防止！飲食店のピークタイムを伸ばすには？</a>
                     </div>
@@ -188,7 +188,7 @@
                     <div class="article-img-box-title">
                         <a href="">知識</a>
                     </div>
-                    <a href=""><img src="demo-image.jpg" alt="img"></a>
+                    <a href=""><img src="demo-image2.png" alt="img"></a>
                     <div class="article-img-box-text">
                         <a href="">飲食店マネジメント職が知るべき経営指標「FLコスト」とは？</a>
                     </div>
@@ -197,7 +197,7 @@
                     <div class="article-img-box-title">
                         <a href="">集客</a>
                     </div>
-                    <a href=""><img src="demo-image.jpg" alt="img"></a>
+                    <a href=""><img src="demo-image3.png" alt="img"></a>
                     <div class="article-img-box-text">
                         <a href="">飲食店の集客のコツ教えます。飲食店と顧客分析編</a>
                     </div>
@@ -206,7 +206,7 @@
                     <div class="article-img-box-title">
                         <a href="">行列</a>
                     </div>
-                    <a href=""><img src="demo-image.jpg" alt="img"></a>
+                    <a href=""><img src="demo-image4.png" alt="img"></a>
                     <div class="article-img-box-text">
                         <a href="">飲食店に行列ができる仕組みとその意外なワケとは？</a>
                     </div>
@@ -220,7 +220,7 @@
                     <div class="article-img-box-title">
                         <a href="">生産性</a>
                     </div>
-                    <a href=""><img src="demo-image.jpg" alt="img"></a>
+                    <a href=""><img src="demo-image1.png" alt="img"></a>
                     <div class="article-img-box-text">
                         <a href="">チャンスロス防止！飲食店のピークタイムを伸ばすには？</a>
                     </div>
@@ -229,7 +229,7 @@
                     <div class="article-img-box-title">
                         <a href="">知識</a>
                     </div>
-                    <a href=""><img src="demo-image.jpg" alt="img"></a>
+                    <a href=""><img src="demo-image2.png" alt="img"></a>
                     <div class="article-img-box-text">
                         <a href="">飲食店マネジメント職が知るべき経営指標「FLコスト」とは？</a>
                     </div>
@@ -238,7 +238,7 @@
                     <div class="article-img-box-title">
                         <a href="">集客</a>
                     </div>
-                    <a href=""><img src="demo-image.jpg" alt="img"></a>
+                    <a href=""><img src="demo-image3.png" alt="img"></a>
                     <div class="article-img-box-text">
                         <a href="">飲食店の集客のコツ教えます。飲食店と顧客分析編</a>
                     </div>
@@ -247,7 +247,7 @@
                     <div class="article-img-box-title">
                         <a href="">行列</a>
                     </div>
-                    <a href=""><img src="demo-image.jpg" alt="img"></a>
+                    <a href=""><img src="demo-image4.png" alt="img"></a>
                     <div class="article-img-box-text">
                         <a href="">飲食店に行列ができる仕組みとその意外なワケとは？</a>
                     </div>
@@ -266,7 +266,7 @@
                     <div class="aside-box">
                         <a href="" class="aside-box-number">1</a>
                         <div class="aside-box-img">
-                            <a href=""><img src="demo-image2.jpg" alt="img"></a>
+                            <a href=""><img src="demo-image5.png" alt="img"></a>
                         </div>
                         <div class="aside-box-text">
                             <a href="">飲食店マネジメント職が知るべき経営指標
@@ -276,7 +276,7 @@
                     <div class="aside-box">
                         <a href="" class="aside-box-number">2</a>
                         <div class="aside-box-img">
-                            <a href=""><img src="demo-image2.jpg" alt="img"></a>
+                            <a href=""><img src="demo-image6.png" alt="img"></a>
                         </div>
                         <div class="aside-box-text">
                             <a href="">時短店舗必見！コロナ禍の飲食店経営に欠かせない空席対策のコツとは？</a>
@@ -285,7 +285,7 @@
                     <div class="aside-box">
                         <a href="" class="aside-box-number">3</a>
                         <div class="aside-box-img">
-                            <a href=""><img src="demo-image2.jpg" alt="img"></a>
+                            <a href=""><img src="demo-image7.png" alt="img"></a>
                         </div>
                         <div class="aside-box-text">
                             <a href="">コロナ禍の飲食店でできる感染症対策と集客施策の両立に欠かせない事は？</a>
@@ -317,3 +317,4 @@
     <p>Copyright © 2021 飲食店マネジメント.biz</p>
 </footer>
 </html>
+
