--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="ja">
 
 <head>
@@ -211,11 +212,83 @@
                         <a href="">飲食店に行列ができる仕組みとその意外なワケとは？</a>
                     </div>
                 </div>
+                <div class="article-img-box">
+                    <div class="article-img-box-title">
+                        <a href="">生産性</a>
+                    </div>
+                    <a href=""><img src="demo-image1.png" alt="img"></a>
+                    <div class="article-img-box-text">
+                        <a href="">チャンスロス防止！飲食店のピークタイムを伸ばすには？</a>
+                    </div>
+                </div>
+                <div class="article-img-box">
+                    <div class="article-img-box-title">
+                        <a href="">知識</a>
+                    </div>
+                    <a href=""><img src="demo-image2.png" alt="img"></a>
+                    <div class="article-img-box-text">
+                        <a href="">飲食店マネジメント職が知るべき経営指標「FLコスト」とは？</a>
+                    </div>
+                </div>
+                <div class="article-img-box">
+                    <div class="article-img-box-title">
+                        <a href="">集客</a>
+                    </div>
+                    <a href=""><img src="demo-image3.png" alt="img"></a>
+                    <div class="article-img-box-text">
+                        <a href="">飲食店の集客のコツ教えます。飲食店と顧客分析編</a>
+                    </div>
+                </div>
+                <div class="article-img-box">
+                    <div class="article-img-box-title">
+                        <a href="">行列</a>
+                    </div>
+                    <a href=""><img src="demo-image4.png" alt="img"></a>
+                    <div class="article-img-box-text">
+                        <a href="">飲食店に行列ができる仕組みとその意外なワケとは？</a>
+                    </div>
+                </div>
             </div>
 
             <button class="see-more"><p>もっと見る ＞</p></button>
 
             <div class="article-img-boxes2">
+                <div class="article-img-box">
+                    <div class="article-img-box-title">
+                        <a href="">生産性</a>
+                    </div>
+                    <a href=""><img src="demo-image1.png" alt="img"></a>
+                    <div class="article-img-box-text">
+                        <a href="">チャンスロス防止！飲食店のピークタイムを伸ばすには？</a>
+                    </div>
+                </div>
+                <div class="article-img-box">
+                    <div class="article-img-box-title">
+                        <a href="">知識</a>
+                    </div>
+                    <a href=""><img src="demo-image2.png" alt="img"></a>
+                    <div class="article-img-box-text">
+                        <a href="">飲食店マネジメント職が知るべき経営指標「FLコスト」とは？</a>
+                    </div>
+                </div>
+                <div class="article-img-box">
+                    <div class="article-img-box-title">
+                        <a href="">集客</a>
+                    </div>
+                    <a href=""><img src="demo-image3.png" alt="img"></a>
+                    <div class="article-img-box-text">
+                        <a href="">飲食店の集客のコツ教えます。飲食店と顧客分析編</a>
+                    </div>
+                </div>
+                <div class="article-img-box">
+                    <div class="article-img-box-title">
+                        <a href="">行列</a>
+                    </div>
+                    <a href=""><img src="demo-image4.png" alt="img"></a>
+                    <div class="article-img-box-text">
+                        <a href="">飲食店に行列ができる仕組みとその意外なワケとは？</a>
+                    </div>
+                </div>
                 <div class="article-img-box">
                     <div class="article-img-box-title">
                         <a href="">生産性</a>
@@ -314,6 +387,7 @@
 
 </body>
 <footer id="footer">
-    <p>Copyright © 2021 飲食店マネジメント.biz</p>
+    <p>Copyright © 2021 飲食店生産性改善マネジメント.biz</p>
 </footer>
 </html>
+
