--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     jQuery(document).on('ready', function() {
     $(".full-screen_one").slick({
     centerMode: true,
-    centerPadding: '24%',
+    centerPadding: '20%',
     dots: true,
     autoplay: true,
     autoplaySpeed: 10000,
@@ -150,13 +150,13 @@
                 <div>
                     <a class="mainvisual-slide" href="">
                         <img src="mainvisual3.jpg" alt="125naroom">
-                        <div class="slide-text"><span class="slider-text-accent">XXXXXXXXXXXXXXXXXXXXXXXXXX</span></div>
+                        <div class="slide-text"><span class="slider-text-accent">XXXXXXXXXXXXXXXX</span></div>
                     </a>
                 </div>
                 <div>
                     <a class="mainvisual-slide" href="">
                         <img src="mainvisual4.jpg" alt="125naroom">
-                        <div class="slide-text"><span class="slider-text-accent">XXXXXXXXXXXXXXXXXXXXXXXXXX</span></div>
+                        <div class="slide-text"><span class="slider-text-accent">XXXXXXXXXXXXXXXX</span></div>
                     </a>
                 </div>
                 <div>
